tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_72.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  x := 0;
               y := (0 - ((- z) + 1223));
               y := ((200 - (- x)) MOD 1223);
               p := (1223 < 0);
               x := 0;
               p := q;
               z := y;
               x := (z + 1);
               r := (200 >= 200);
               r := ((200 <= (- z)) OR ((200 - 1223) # x))
END Test11.